Fix spacing between name and photo on Current Board page

--- a/app/assets/stylesheets/board_members.css.scss
+++ b/app/assets/stylesheets/board_members.css.scss
@@ -11,8 +11,10 @@ img.board-photo {
   height: 425px;
 }
 
-.top-column-header {
-  margin-top: 0;
+@media (min-width: 768px) {
+  .top-column-header {
+    margin-top: 0;
+  }
 }
 
 .top-column-header, .column-header {
