--- a/app/assets/stylesheets/member_groups.css.scss
+++ b/app/assets/stylesheets/member_groups.css.scss
@@ -11,9 +11,9 @@ img.member-group-photo {
   height: 425px;
 }
 
-.top-column-header {
+/*.top-column-header {
   margin-top: 0;
-}
+}*/
 
 .top-column-header, .column-header {
   margin-bottom: 5px;
